--- a/client/rest-high-level/build.gradle
+++ b/client/rest-high-level/build.gradle
@@ -20,7 +20,6 @@ import org.elasticsearch.gradle.test.RestIntegTestTask
 import org.gradle.api.internal.provider.Providers
 
 apply plugin: 'elasticsearch.build'
-apply plugin: 'elasticsearch.rest-test'
 apply plugin: 'nebula.maven-base-publish'
 apply plugin: 'nebula.maven-scm'
 apply plugin: 'com.github.johnrengelman.shadow'
@@ -77,12 +76,13 @@ forbiddenApisMain {
   signaturesFiles += files('src/main/resources/forbidden/rest-high-level-signatures.txt')
 }
 
-integTestRunner {
-  systemProperty 'tests.rest.cluster.username', System.getProperty('tests.rest.cluster.username', 'test_user')
-  systemProperty 'tests.rest.cluster.password', System.getProperty('tests.rest.cluster.password', 'test-password')
+Task trialLicenseClusterTest = tasks.create(name: 'trialLicenseClusterTest', type: RestIntegTestTask) {
+  description  = 'Runs integration tests against a cluster with a trial license'
+  group = JavaBasePlugin.VERIFICATION_GROUP
 }
+trialLicenseClusterTest.mustRunAfter(tasks.precommit)
 
-integTestCluster {
+configure(extensions.findByName(trialLicenseClusterTest.getName() + 'Cluster')) {
   setting 'xpack.license.self_generated.type', 'trial'
   setting 'xpack.security.enabled', 'true'
   setupCommand 'setupDummyUser',
@@ -101,3 +101,17 @@ integTestCluster {
     return tmpFile.exists()
   }
 }
+
+tasks.findByName(trialLicenseClusterTest.getName() + 'Runner').configure {
+  systemProperty 'tests.rest.cluster.username', System.getProperty('tests.rest.cluster.username', 'test_user')
+  systemProperty 'tests.rest.cluster.password', System.getProperty('tests.rest.cluster.password', 'test-password')
+}
+
+
+Task basicLicenseClusterTest = tasks.create(name: 'basicLicenseClusterTest', type: RestIntegTestTask) {
+  description = 'Runs integration tests against a cluster with a basic license'
+  group = JavaBasePlugin.VERIFICATION_GROUP
+}
+basicLicenseClusterTest.mustRunAfter(tasks.precommit, trialLicenseClusterTest)
+
+tasks.check.dependsOn(trialLicenseClusterTest, basicLicenseClusterTest)
