add another test cluster for basic license
cluster starts up okay but test runner blows up because it can't find
the protocol project classes. the original integ test runner works fine
and is able to find the protocol project

--- a/client/rest-high-level/build.gradle
+++ b/client/rest-high-level/build.gradle
@@ -101,3 +101,10 @@ integTestCluster {
     return tmpFile.exists()
   }
 }
+
+Task basicLicenseClusterTest = tasks.create(name: 'basicLicenseClusterTest', type: RestIntegTestTask) {
+  description = 'Runs integration tests against a cluster with a basic license'
+  group = JavaBasePlugin.VERIFICATION_GROUP
+}
+basicLicenseClusterTest.mustRunAfter(tasks.precommit, tasks.integTestRunner)
+tasks.check.dependsOn(basicLicenseClusterTest)
